[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=62.6", "wheel"]

[project]
name = "suproc"
dynamic = ["version"]
description = "AVA Single Unique Process"
authors = [
  { name="anton vitvitsky", email="darkalert2517@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pidlockfile"
]

[tool.setuptools.package-dir]
suproc = "suproc"

[tool.setuptools.dynamic]
version = {attr = "suproc.__version__"}

[project.scripts]
suproc = "suproc.suproc:main"
suproc-init = "suproc.initializer:main"
suproc-detach = "suproc.suproc:_detach_process"